[tool.poetry]
name = "Volare Trading Bot"
version = "0.1.0"
description = "AI-driven Raydium trading bot with advanced strategies"
authors = ["Ioannis Vlachakis <Ioannis@volare.trading>"]

[tool.poetry.dependencies]
python = "^3.8"
solana = "^0.30.2"
requests = "^2.31.0"
pandas = "^2.1.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
tensorflow = "^2.13.0"
ccxt = "^4.0.0"
python-dotenv = "^1.0.0"
scipy = "^1.11.0"
aiohttp = "^3.8.5"
joblib = "^1.3.0"
transformers = "^4.30.0"
torch = "^2.0.0"
websockets = "^11.0.3"
asyncio = "^3.4.3"
ta = "^0.10.2"  # Technical analysis indicators
statsmodels = "^0.14.0"  # For statistical analysis
python-binance = "^1.0.17"  # For market data comparison
python-telegram-bot = "^20.3"  # For notifications

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
pylint = "^2.17.5"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pylint.messages_control]
disable = ["C0111", "C0103", "C0330", "C0326"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=backend --cov-report=term-missing" 